--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JLambertazzo/HIITWorkoutOnline#readme",
   "dependencies": {
     "@discordjs/opus": "github:discordjs/opus",
+    "@google-cloud/text-to-speech": "^3.1.3",
     "discord.js": "^12.5.1"
   }
 }
