--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@discordjs/opus": "github:discordjs/opus",
     "@google-cloud/text-to-speech": "^3.1.3",
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "tmp": "^0.2.1"
   }
 }
